--- a/StarProject/appsettings.json
+++ b/StarProject/appsettings.json
@@ -3,11 +3,19 @@
         "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-StarProject-db4998f1-f3cc-409a-b880-638d5656a557;Trusted_Connection=True;MultipleActiveResultSets=true",
         "StarProject": "Data Source=(localdb)\\ProjectModels;Initial Catalog=StarProject;Integrated Security=true;Encrypt=true;TrustServerCertificate=true;"
     },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "EmailSettings": {
+        "SmtpServer": "smtp.gmail.com",
+        "Port": 587,
+        "SenderName": "阿波羅天文館",
+        "SenderEmail": "apollotw2025@gmail.com",
+        "Username": "apollotw2025@gmail.com",
+        "Password": "bear uxql rdat jhzm"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
