--- a/StarProject/StarProject.csproj
+++ b/StarProject/StarProject.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Product - 複製\**" />
+    <Content Remove="Views\Product - 複製\**" />
+    <EmbeddedResource Remove="Views\Product - 複製\**" />
+    <None Remove="Views\Product - 複製\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="EPPlus" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.19" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.19" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.19" />
