--- a/StarProject/appsettings.json
+++ b/StarProject/appsettings.json
@@ -3,16 +3,15 @@
         "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-StarProject-db4998f1-f3cc-409a-b880-638d5656a557;Trusted_Connection=True;MultipleActiveResultSets=true",
         "StarProject": "Data Source=(localdb)\\ProjectModels;Initial Catalog=StarProject;Integrated Security=true;Encrypt=true;TrustServerCertificate=true;"
     },
-    "Email": {
+    "EmailSettings": {
         "Server": "smtp.gmail.com",
         "Port": 587,
         "SenderName": "Star Project",
         "SenderEmail": "apollotw2025@gmail.com",
         "Account": "apollotw2025@gmail.com",
-        "Password": "bear uxql rdat jhzm",
-        "Security": "true"
+        "Password": "bearuxqlrdatjhzm",
+        "Security": true
     },
-
     "Logging": {
         "LogLevel": {
             "Default": "Information",
