--- a/StarProject/appsettings.json
+++ b/StarProject/appsettings.json
@@ -6,7 +6,7 @@
     "EmailSettings": {
         "Server": "smtp.gmail.com",
         "Port": 587,
-        "SenderName": "Star Project",
+        "SenderName": "阿波羅天文館",
         "SenderEmail": "apollotw2025@gmail.com",
         "Account": "apollotw2025@gmail.com",
         "Password": "bearuxqlrdatjhzm",
