--- a/StarProject/appsettings.json
+++ b/StarProject/appsettings.json
@@ -9,7 +9,7 @@
         "SenderName": "阿波羅天文館",
         "SenderEmail": "apollotw2025@gmail.com",
         "Username": "apollotw2025@gmail.com",
-        "Password": "bear uxql rdat jhzm"
+        "Password": "bear uxql rdat jhzm",
         "Security": "true"
     },
     "Logging": {
