新增活動、優惠一鍵輸入

--- a/StarProject/appsettings.json
+++ b/StarProject/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-StarProject-db4998f1-f3cc-409a-b880-638d5656a557;Trusted_Connection=True;MultipleActiveResultSets=true",
-
-    "StarProject": "Server=(localdb)\\mssqllocaldb;Database=StarProject;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "StarProject": "Data Source=(localdb)\\ProjectModels;Initial Catalog=StarProject;Integrated Security=true;Encrypt=true;TrustServerCertificate=true;"
   },
   "EmailSettings": {
     "Server": "smtp.gmail.com",
